# ib-bench

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CODE-QUALITY.md  CODEX.md  IB-bench.md  LICENSE  README-x.md  README.md  TODO.md  WORKPLAN.md  leaderboard.json  pyproject.toml  tasks.md
.claude/skills/: create-ib-task.md  explain-code.md  review-ib-task.md
data-factory/financial-modelling/: plan.md
data-factory/human-generated/: KEX-Model-TODO.xlsx  WILD-Model-TODO.xlsx  dave-and-busters.xlsx
data-factory/synthetic/: AGENTS.md  goog-10-k-2024.txt  goog-10-k-2024_text.txt
data-warehouse/human-generated/: ACI-Model-Shell.xlsx  GS-Alphabet-20251030.xlsx  JPM-Alphabet-20251030.xlsx  KEX-Model.xlsx  MRW-LBO-Model-No-Circ.xlsx  WILD-Model.xlsx  dave-and-busters.xlsx
data-warehouse/synthetic/: AGENTS.md
docs/: ARCHITECTURE.md  CLAUDE_API_SUMMARY.md  GEMINI_API_SUMMARY.md  behavior-change-proposals.md
docs/plans/: 2025-12-30-analyze-cli-design.md  2025-12-30-leaderboard-design.md  TODO-leaderboard.md
eval/: analyze.py  export_tasks.py  helpers.py  leaderboard.py  leaderboard_config.yaml  llm_judge.py  mark_blocked.py  run.py  runners.py  score.py  squash_runs.py  test_eval.py  xlsx_converter.py
eval/configs.example/: azure-example.yaml  gemini-example.yaml  gpt5.2-test.yaml  leaderboard_config.yaml  openai-example.yaml  (+3 more)
reference-files/: IB-bench.md  TODO.md  architecture-design-draft.md
tests/: conftest.py
tests_v2/: README.md  conftest.py
tmp/: task_results-20260102_185721.json  task_results-20260103_015731.json  tasks-20260102_181720.json
(+793 files in other folders)
