[project]
name = "ib-bench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1.5",
    "pyyaml>=6.0.3",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.24.0",
    "types-pyyaml>=6.0.12.20250915",
    "azure-ai-projects==2.0.0b3",
    "azure-identity>=1.25.1",
]

[tool.basedpyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"
include = ["eval"]
exclude = ["eval/tests"]
